--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         >
         <ul>
           <li>
-            <a class="nav-link">Studio</a>
+            <a href="./index.html" class="nav-link">Studio</a>
           </li>
           <li>
-            <a class="nav-link">Portfolio</a>
+            <a  href="./index.html"class="nav-link">Portfolio</a>
           </li>
           <li>
-            <a class="nav-link">Contacts</a>
+            <a  href="./index.html"class="nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -93,7 +93,7 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list">
             <img
               src="./images/portrait-1.jpg"
               alt="Portrait Mark"
@@ -103,7 +103,7 @@
             <h3 class="team-member">Mark Guerrero</h3>
             <p class="team-mem-pos">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/portrait-2.jpg"
               alt="Portrait Tom"
@@ -113,7 +113,7 @@
             <h3 class="team-member">Tom Ford</h3>
             <p class="team-mem-pos">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/portrait-3.jpg"
               alt="Portrait Camila"
@@ -123,7 +123,7 @@
             <h3 class="team-member">Camila Garcia</h3>
             <p class="team-mem-pos">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/portrait-4.jpg"
               alt="Portrait Daniel"
